--- a/abstract.tex
+++ b/abstract.tex
@@ -2,19 +2,24 @@
 \label{chap:abstract}
 
 
-この本では100\%私が書きたいことで構成されています。
-第1章ではよく誤解されがちなプロトタイプについて、
-第2章ではここ一年くらいですかね、
-流行っている気がするPromiseについて、
-第3章ではこれから流行ると思われるが
+この本は個人的に暗黙知としてたまっていた知識を
+ちょっとまとめてみようかと書いてみたものです。
+第1章ではオブジェクトについて、これは
+JavaScriptのオブジェクトについて正確な挙動がどういうものか
+書かれています。
+第2章ではこれから流行ると思われるが
 まだまだキワモノなemscriptenについて書かれています。
 また、各章ごとの関連性は全くありませんので
 好きな章からお楽しみください。
 
 \section*{対象の読者}
 
-本書ではJavaScriptをある程度理解しているプログラマー向けです。
+本書を読むために必要なこと
 
+\begin{itemize}
+ \item 大体のJavaScriptを問題なく読める・書ける
+ \item Linuxの基本的な知識
+\end{itemize}
 
 \section*{対象のブラウザ}
 
@@ -23,4 +28,8 @@ ECMAScript5.1に準拠している、
 TypedArrayが実装されている必要があります。
 動作環境としてはChrome、Firefox、IE10+を推奨します。
 
-\section*{}
+\section*{本書のダウンロード}
+
+本書の内容は以下からダウンロードできます。
+
+https://github.com/ukyo/comike84-js
