--- a/bibs.tex
+++ b/bibs.tex
@@ -2,5 +2,10 @@
 %\label{chap:bibs}
 
 \begin{thebibliography}{1}
- \bibitem{es5} ECMAScript 5.1
+ \bibitem{es5} ECMAScript Language Specification, http://www.ecma-international.org/ecma-262/5.1/
+ \bibitem{emscripten} emscripten, https://github.com/kripken/emscripten
+ \bibitem{llvm} The LLVM Compiler, http://llvm.org/
+ \bibitem{asm} asm.js, http://asmjs.org/
+ \bibitem{relooper} relooper algorithm, https://github.com/kripken/Relooper
+ \bibitem{closure} Closure Compiler, https://developers.google.com/closure/compiler/
 \end{thebibliography}
