--- a/end.tex
+++ b/end.tex
@@ -3,24 +3,18 @@
 \begin{flushright}
 
  \ 
- \vspace{100mm}
+ \vspace{160mm}
 
  |||||||||||||||||||||||||\\
 
- \huge\textbf{てすと}\\
+ \huge\textbf{JavaScriptの薄い本}\\
  \vspace{2zw}
 
- \small{平成あああ　印刷}\\
-
- \small{平成あああ　発行}\\
+ \small{2013年 8月11日}\\
  \vspace{1zw}
- \normalsize{著　者　　}\LARGE{あああ}\\
+ \normalsize{発行者　　}\LARGE{ukyoweb}\\
  \vspace{1zw}
- \normalsize{発行者　　}\LARGE{あああ}\\
- \vspace{1zw}
- \normalsize{印刷者　　}\LARGE{あああ}\\
- \vspace{1zw}
- \normalsize{発行所　　}\huge{あああ}\\
+ \normalsize{印刷者　　}\LARGE{しまや出版様}\\
 
  ||||||||||||\\
 
