--- a/index.tex
+++ b/index.tex
@@ -1,4 +1,4 @@
-\documentclass[b5j, 9pt, tombow]{jsbook}
+\documentclass[b5j, 9pt, tombo]{jsbook}
 \usepackage[dvipdfmx]{graphicx}
 \usepackage[dvipdfmx]{color}
 \usepackage[utf8]{inputenc}
@@ -12,6 +12,9 @@
 \definecolor{white}{rgb}{1,1,1}
 %\definecolor{purple}{rgb}{0.65, 0.12, 0.82}
 
+% 位置調整
+\voffset=-6mm
+\hoffset=-12.5mm
 \setlength{\topmargin}{-16mm}
 \addtolength{\topmargin}{0mm}
 \setlength{\oddsidemargin}{-8mm}
@@ -90,7 +93,7 @@ style=custom
 \setcounter{secnumdepth}{4}
 
 %opening
-\title{JSの薄い本}
+\title{JavaScriptの薄い本}
 \author{ukyo}
 
 \begin{document}
