--- a/emscripten.tex
+++ b/emscripten.tex
@@ -107,7 +107,7 @@ JavaScriptの関数として使えるようにしてみましょう。
 ダウンロードします。
 
 \begin{lstlisting}[style=command]
-$ git clone hogehoge
+$ git clone https://github.com/ukyo/comike84-js-emscripten.git 
 \end{lstlisting}
 
 \subsubsection*{レポジトリの構成}
