write repos url

--- a/emscripten.tex
+++ b/emscripten.tex
@@ -107,7 +107,7 @@ JavaScriptの関数として使えるようにしてみましょう。
 ダウンロードします。
 
 \begin{lstlisting}[style=command]
-$ git clone https://github.com/ukyo/comike84-js-emscripten.git 
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
 \end{lstlisting}
 
 \subsubsection*{レポジトリの構成}
@@ -526,4 +526,59 @@ $ # 全てのファイルをビルドします
 $ grunt build
 $ # 開発サーバの立ち上げ
 $ grunt devserver
+\end{lstlisting}
+
+\begin{lstlisting}[style=command]
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
+$ git clone git@github.com:ukyo/comike84-js-emscripten.git
 \end{lstlisting}
